MODINREACH-380 Fixing code smells and test cases